# mcp-deepresearch

./: .gitignore  README.md  authenticate_gdrive.py  config.json  pyproject.toml  start_server.py
docs/: api_test_instructions.txt  api_testing_tools.md
downloads/: downloaded_test_document.txt
src/deepresearch/: __init__.py  __main__.py  models.py  orchestration.py  server.py
src/deepresearch/connectors/: __init__.py  arxiv.py  base.py  drive.py  google_scholar.py  pubmed.py  semantic_scholar.py
src/deepresearch/pipelines/: __init__.py  citation_graph_builder.py  fulltext_fetcher.py  metadata_extractor.py  paper_comparator.py  relation_extractor.py  summarizer.py  trend_analyzer.py
src/deepresearch/tests/: README.md  __init__.py  read_gdrive_files.py  test_connectors.py  test_connectors_download.py  test_drive_connector.py  test_google_scholar_fix.py  test_semantic_scholar_direct.py
src/deepresearch/utils/: __init__.py  llm_utils.py
